fix: safari mobile height collapse issue

--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -12,6 +12,7 @@
   color: rgba(0, 0, 0, 0.55);
   overflow: hidden;
   border-top: $border-box;
+  height: $footer-height;
 
   &__icon {
     position: absolute;
