--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -2,6 +2,7 @@
   padding-top: $space-xs;
   padding-bottom: $space-xs;
   border-bottom: $border-box;
+  height: $header-height;
 
   &__clock {
     width: 7rem;
