--- a/src/views/Home.scss
+++ b/src/views/Home.scss
@@ -1,5 +1,6 @@
 .home {
   position: relative;
+  min-height: $content-min-height;
   height: 100%;
   background-repeat: no-repeat;
   background-size: cover;
